k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: selfheal
  labels:
    name: selfheal
    app.kubernetes.io/part-of: selfheal-app
