k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selfheal-app
  namespace: selfheal
  labels:
    app: selfheal-app
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selfheal-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: selfheal-app
        version: v1
    spec:
      containers:
        - name: selfheal-app
          image: selfhealacr042026.azurecr.io/selfheal-app:v1
          ports:
            - containerPort: 9090
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 9090
            initialDelaySeconds: 10
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 9090
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
      imagePullSecrets:
        - name: acr-secret
      restartPolicy: Always
